--- a/index.html
+++ b/index.html
@@ -13,66 +13,66 @@
 <body>
 
     <nav class="silc-nav" id="nav-0">
-        <ul class="silc-nav__items">
-            <li class="silc-nav__item">
-                <a class="silc-nav__link" href="#">Item 1</a>
-                <ul class="silc-nav__items">
-                    <li class="silc-nav__item">
-                        <a class="silc-nav__link" href="#">Item 1.1</a>
-                        <ul class="silc-nav__items">
-                            <li class="silc-nav__item"><a class="silc-nav__link" href="#">Item 1.1.1</a></li>
-                            <li class="silc-nav__item"><a class="silc-nav__link" href="#">Item 1.1.2</a></li>
-                            <li class="silc-nav__item">
-                                <a class="silc-nav__link" href="#">Item 1.1.3</a>
-                                <ul class="silc-nav__items">
-                                    <li class="silc-nav__item"><a class="silc-nav__link" href="#">Item 1.1.3.1</a></li>
-                                    <li class="silc-nav__item"><a class="silc-nav__link" href="#">Item 1.1.3.2</a></li>
-                                    <li class="silc-nav__item"><a class="silc-nav__link" href="#">Item 1.1.3.3</a></li>
+        <ul>
+            <li>
+                <a href="#">Item 1</a>
+                <ul>
+                    <li>
+                        <a href="#">Item 1.1</a>
+                        <ul>
+                            <li><a href="#">Item 1.1.1</a></li>
+                            <li><a href="#">Item 1.1.2</a></li>
+                            <li>
+                                <a href="#">Item 1.1.3</a>
+                                <ul>
+                                    <li><a href="#">Item 1.1.3.1</a></li>
+                                    <li><a href="#">Item 1.1.3.2</a></li>
+                                    <li><a href="#">Item 1.1.3.3</a></li>
                                 </ul>
                             </li>
                         </ul>
                     </li>
-                    <li class="silc-nav__item">
-                        <a class="silc-nav__link" href="#">Item 1.2</a>
-                        <ul class="silc-nav__items">
-                            <li class="silc-nav__item"><a class="silc-nav__link" href="#">Item 1.2.1</a></li>
-                            <li class="silc-nav__item">
-                                <a class="silc-nav__link" href="#">Item 1.2.2</a>
-                                <ul class="silc-nav__items">
-                                    <li class="silc-nav__item">
-                                        <a class="silc-nav__link" href="#">Item 1.2.2.1</a>
-                                        <ul class="silc-nav__items">
-                                            <li class="silc-nav__item"><a class="silc-nav__link" href="#">Item 1.2.2.1.1</a></li>
-                                            <li class="silc-nav__item"><a class="silc-nav__link" href="#">Item 1.2.2.1.2</a></li>
-                                            <li class="silc-nav__item"><a class="silc-nav__link" href="#">Item 1.2.2.1.3</a></li>
+                    <li>
+                        <a href="#">Item 1.2</a>
+                        <ul>
+                            <li><a href="#">Item 1.2.1</a></li>
+                            <li>
+                                <a href="#">Item 1.2.2</a>
+                                <ul>
+                                    <li>
+                                        <a href="#">Item 1.2.2.1</a>
+                                        <ul>
+                                            <li><a href="#">Item 1.2.2.1.1</a></li>
+                                            <li><a href="#">Item 1.2.2.1.2</a></li>
+                                            <li><a href="#">Item 1.2.2.1.3</a></li>
                                         </ul>
                                     </li>
-                                    <li class="silc-nav__item"><a class="silc-nav__link" href="#">Item 1.2.2.2</a></li>
-                                    <li class="silc-nav__item"><a class="silc-nav__link" href="#">Item 1.2.2.3</a></li>
+                                    <li><a href="#">Item 1.2.2.2</a></li>
+                                    <li><a href="#">Item 1.2.2.3</a></li>
                                 </ul>
                             </li>
-                            <li class="silc-nav__item"><a class="silc-nav__link" href="#">Item 1.2.3</a></li>
+                            <li><a href="#">Item 1.2.3</a></li>
                         </ul>
                     </li>
                 </ul>
             </li>
-            <li class="silc-nav__item">
-                <a class="silc-nav__link" href="#">Item 2</a>
-                <ul class="silc-nav__items">
-                    <li class="silc-nav__item">
-                        <a class="silc-nav__link" href="#">Item 2.1</a>
-                        <ul class="silc-nav__items">
-                            <li class="silc-nav__item"><a class="silc-nav__link" href="#">Item 2.1.1</a></li>
-                            <li class="silc-nav__item"><a class="silc-nav__link" href="#">Item 2.1.2</a></li>
-                            <li class="silc-nav__item"><a class="silc-nav__link" href="#">Item 2.1.3</a></li>
+            <li>
+                <a href="#">Item 2</a>
+                <ul>
+                    <li>
+                        <a href="#">Item 2.1</a>
+                        <ul>
+                            <li><a href="#">Item 2.1.1</a></li>
+                            <li><a href="#">Item 2.1.2</a></li>
+                            <li><a href="#">Item 2.1.3</a></li>
                         </ul>
                     </li>
-                    <li class="silc-nav__item">
-                        <a class="silc-nav__link" href="#">Item 2.2</a>
-                        <ul class="silc-nav__items">
-                            <li class="silc-nav__item"><a class="silc-nav__link" href="#">Item 2.2.1</a></li>
-                            <li class="silc-nav__item"><a class="silc-nav__link" href="#">Item 2.2.2</a></li>
-                            <li class="silc-nav__item"><a class="silc-nav__link" href="#">Item 2.2.3</a></li>
+                    <li>
+                        <a href="#">Item 2.2</a>
+                        <ul>
+                            <li><a href="#">Item 2.2.1</a></li>
+                            <li><a href="#">Item 2.2.2</a></li>
+                            <li><a href="#">Item 2.2.3</a></li>
                         </ul>
                     </li>
                 </ul>
