--- a/index.html
+++ b/index.html
@@ -8,9 +8,84 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="./build/index.css" />
+    <style>
+        body {
+            font-family: sans-serif;
+        }
+
+        .silc-nav {
+            border-top: 1px solid #ddd;
+        }
+
+        .silc-nav__item {
+            border-bottom: 1px solid #ddd;
+        }
+
+        .silc-nav__link {
+            padding: 1em;
+        }
+
+        .silc-nav__move--forward {
+            background: #f1f1f1;
+            text-indent: -999em;
+        }
+
+        .silc-nav__move--back {
+            padding: 1em 1em 1em 2em;
+            background: #f1f1f1;
+        }
+
+        .silc-nav__move--back:before {
+            content: "";
+            display: inline-block;
+            border-top: 7px solid transparent;
+            border-bottom: 7px solid transparent;
+            border-right: 7px solid #000;
+            position: absolute;
+            left: 1em;
+        }
+
+        .silc-nav__move--forward:after {
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            content: "";
+            display: block;
+            text-indent: 0;
+            text-align: center;
+            width: 0; 
+            height: 0;
+            border-top: 7px solid transparent;
+            border-bottom: 7px solid transparent;
+            border-left: 7px solid #000;
+            transform: translate(-50%, -50%);
+        }
+
+        @media (min-width:800px) {
+
+            .silc-nav,
+            .silc-nav__item {
+                border: 0;
+            }
+
+            .silc-nav__link {
+                padding: .5em;
+            }
+
+            .silc-nav__items .silc-nav__items {
+                background: #f1f1f1;
+            }
+
+            .silc-nav__items .silc-nav__items .silc-nav__link {
+                padding: .5em;
+            }
+        }
+    </style>
 </head>
 
 <body>
+
+    <h1>silc nav demo</h1>
 
     <nav class="silc-nav" id="nav-0">
         <ul>
